@@ -6,6 +6,6 @@ MAIN = Progress.hs
 
 APPNAME = progress 
 
-NEEDPACKAGES = lang gtk2
+NEEDPACKAGES = gtk2
 
 include $(TOP)/mk/common.mk
