@@ -6,6 +6,6 @@ MAIN = World.hs
 
 APPNAME = helloWorld
 
-NEEDPACKAGES = lang gtk2
+NEEDPACKAGES = gtk2
 
 include $(TOP)/mk/common.mk
